// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fixture:plugin:babel-preset plugin:babel-preset:options:import 1`] = `
"// index.tsx
import _Button from \\"antd/lib/button\\";
var value = /* @__PURE__ */ React.createElement(_Button, null);
console.log(value);
"
`;

exports[`fixture:plugin:babel-preset plugin:babel-preset:options:import 2`] = `
"// libuild:virtual:/index.ts?virtual
import _Button from \\"antd/lib/button\\";
var value = /* @__PURE__ */ React.createElement(_Button, null);
console.log(value);
"
`;

exports[`fixture:plugin:babel-preset plugin:babel-preset:options:import-array 1`] = `
"// index.tsx
import _Button from \\"antd/lib/button\\";
var value = /* @__PURE__ */ React.createElement(_Button, null);
console.log(value);
"
`;

exports[`fixture:plugin:babel-preset plugin:babel-preset:options:import-array 2`] = `
"// libuild:virtual:/index.ts?virtual
import _Button from \\"antd/lib/button\\";
var value = /* @__PURE__ */ React.createElement(_Button, null);
console.log(value);
"
`;

exports[`fixture:plugin:babel-preset plugin:babel-preset:options:react 1`] = `
"// index.tsx
import { Button } from \\"antd\\";
var value = /* @__PURE__ */ React.createElement(Button, null);
console.log(value);
"
`;

exports[`fixture:plugin:babel-preset plugin:babel-preset:options:react 2`] = `
"// libuild:virtual:/index.ts?virtual
import { Button } from \\"antd\\";
var value = /* @__PURE__ */ React.createElement(Button, null);
console.log(value);
"
`;
